<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:background="@color/bg_grey"
    android:padding="16dp"
    android:gravity="start">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:text="@string/new_list"
        android:textColor="@color/font_white"
        android:textSize="@dimen/font_size_update_title"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/name_of_the_new_list"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/font_white"
        android:textColorHint="@color/font_light_grey"
        android:hint="@string/new_list_placeholder"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/algo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/menu_item_theme_colour"
        android:textColor="@color/font_light_blue"
        android:layout_marginBottom="10dp"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingClass">

        <ImageButton
            android:id="@+id/color_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/bg_grey"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/button"
            android:contentDescription="@string/theme_main_light_blue" />

        <ImageButton
            android:id="@+id/color_second"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/bg_grey"
            android:tint="@color/theme_green"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/button"
            android:contentDescription="@string/theme_second_green"/>

        <ImageButton
            android:id="@+id/color_third"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/bg_grey"
            android:tint="@color/theme_pink"
            app:srcCompat="@drawable/button"
            android:contentDescription="@string/theme_third_pink"/>
    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>
