<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    >


    <TextView
        android:id="@+id/title_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_list_item_view"
        android:textColor="@color/font_light_blue"
        android:gravity="center_vertical"
        android:textSize="@dimen/font_size_title"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/redirects_to_main_back_button"/>

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/bg_main"
        android:tint="@color/font_light_blue"
        android:contentDescription="@string/add_icon2_description"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="646dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/view_archived_button"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:background="@drawable/button"
        android:text="@string/archived_button_main"
        android:textColor="@color/font_button"
        android:radius="30dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="647dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/redirects_to_main_back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/bg_main"
        android:contentDescription="@string/back_arrow_icon_description"
        android:tint="@color/font_light_blue"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="118dp"
        app:layout_constraintTop_toBottomOf="@+id/title_list_view"
        app:layout_constraintBottom_toTopOf="@+id/view_archived_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/outline_more_vert_24"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/bg_main"
        android:tint="@color/font_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showPopup"
        android:contentDescription="@string/menu_icon_description" />

</androidx.constraintlayout.widget.ConstraintLayout>