<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_main">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textColor="@color/font_light_blue"
        android:textSize="@dimen/font_size_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/add_bar"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints,UseCompoundDrawables"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="684dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/add_icon"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="start"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_icon_description"
            app:tint="@color/font_light_grey" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_list"
            android:textColor="@color/font_light_grey"
            android:textSize="@dimen/font_size_update_title"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ListView
        android:id="@+id/current_list"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="118dp"
        app:layout_constraintTop_toBottomOf="@+id/menu_button"
        app:layout_constraintBottom_toTopOf="@+id/add_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/outline_more_vert_24"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/bg_main"
        android:tint="@color/font_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showPopup"
        android:contentDescription="@string/menu_icon_description" />

</androidx.constraintlayout.widget.ConstraintLayout>