<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/bg_main"
        android:contentDescription="@string/back_arrow_icon_description"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:tint="@color/font_light_blue"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/title_archived_items_view"
        android:textColor="@color/font_light_blue"
        android:textSize="@dimen/font_size_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="64dp"
        app:layout_constraintTop_toBottomOf="@+id/go_back_button"/>

    <ListView
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="602dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="128dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/outline_more_vert_24"
        tools:layout_editor_absoluteX="342dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/bg_main"
        android:tint="@color/font_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="showPopup"
        android:contentDescription="@string/menu_icon_description" />

</androidx.constraintlayout.widget.ConstraintLayout>